assets/flywaydb.css
#top-cta {
    width: 100%;
    background-color: #008BC0;
    text-align: center;
}

#top-cta a {
    font-size: 16px;
    display: block;
    padding: 10px;
    color: #EFF7FB;
    line-height: 24px;
}

#top-cta a:hover {
    text-decoration: none;
}

#top-cta a img {
    margin-top: -5px;
}

.inline-cta {
    display: block;
    padding: 10px;
    margin-top: 20px;
    border: 1px dashed #DFE7EB;
    background-color: #EFF7FB;
    color: #008BC0;
}

.inline-cta i {
    color: #008BC0;
}

.inline-cta:hover {
    text-decoration: none;
    color: #008BC0;
}

.inline-cta img {
    margin-top: -3px;
}

#header {
    padding-bottom: 10px;
    margin-bottom: 30px;
    margin-top: 10px;
}

#header img {
    margin-top: 10px;
    margin-bottom: -20px;
}

.tab-pane>pre:first-child {
    margin-top: 10px;
}

.tab-pane>code {
    display: inline-block;
    margin-top: 10px;
}

#tabs {
    float: right;
}

#big-sell {
    min-height: 750px;
    text-align: center;
    width: 100% !important;
    margin-top: -60px;
    padding-top: 60px;
    padding-bottom: 100px;
    font-size: 12px;
}

#big-sell div {
    color: #555555;
}

#newsletter-sign-up {
    text-align: center;
    margin-top: 60px;
}

.strong-heading {
    font-weight: bold;
    font-size: 32px;
    color: #555555;
    text-align: center;
    line-height: 150%;
}

#tagline {
    margin-top: 100px;
}

#big-sell #details a {
    margin-left: 10px;
    margin-right: 10px;
}

#big-sell p#links {
    padding-top: 30px;
    line-height: 100%;
    display: block;
}
#big-sell div#worksOn i {
    font-size: 16px;
    padding-left: 3px;
    padding-right: 3px;
}
#big-sell div#worksOn img {
    margin-top: -4px;
    height: 12px;
    padding-left: 3px;
    padding-right: 3px;
}
#big-sell p#news {
    display: block;
    margin-top: -5px;
}

a {
    color: #0166AE;
}

h1 {
    margin-top: 0;
}

img {
    max-width: 100%;
}

.btn-primary {
    background-color: #0166AE;
}

.btn-info {
    background-color: #aaa;
    border-color: #999;
}

.btn-info:hover {
    background-color: #999;
    border-color: #888;
}

.btn-jumbo {
    font-size: 20px;
    padding: 14px 24px;
    margin: 20px 5px;
    border-radius: 6px;
}

.btn-twitter {
    padding: 3px 9px;
    font-size: 11px;
    font-weight: bold;
    background-color: #1b95e0;
    border: 0;
}

.btn-twitter:hover {
    background-color: #0c7abf;
}

.btn-twitter i {
    padding-left: 0 !important;
}

#social i {
    font-size: 28px;
    padding-top: 40px;
    padding-left: 10px;
    padding-right: 10px;
}

.tabbable>.nav-tabs>li>a {
    font-size: 12px !important;
    padding: 7px 10px;
}

.nav-pills li a:hover {
    background-color: #ccc;
    color: white;
}

.nav-pills>li.active>a,.nav-pills>li.active>a:hover,.nav-pills>li.active>a:focus, .nav-pills>li.active>a>i {
    background-color: #0166AE;
    color: white;
}

#pills .nav-pills li a {
    font-size: 12px;
    padding: 7px 10px;
    margin-bottom: 20px;
}

#menu .nav-pills li {
    font-size: 16px;
}

#menu .nav-pills li a {
    border-radius: 0 !important;
}

#menu .nav-pills .nav-header {
    cursor: default;
    font-size: 12px;
    font-weight: bold;
    text-transform: uppercase;
    padding: 10px 15px;
    background-color: #f0f0f0;
    margin-top: 30px;
    color: #333;
}

#social a:hover i {
    color: #0088cc !important;
}

#tagline-long {
    margin-top: 20px;
    margin-bottom: 30px;
    font-size: 32px;
}

#top3 {
    margin-top: 40px;
    text-align: center;
}

#top3 .top3-icon {
    font-size: 120px;
    margin-bottom: 20px;
}

#top3 .col-md-4 {
    margin-bottom: 50px;
}

hr.soften {
    height: 1px;
    margin: 54px 0;
    background-image: -webkit-linear-gradient(left, transparent, rgba(0, 0, 0, .1), transparent);
    background-image: -moz-linear-gradient(left, transparent, rgba(0, 0, 0, .1), transparent);
    background-image: -ms-linear-gradient(left, transparent, rgba(0, 0, 0, .1), transparent);
    background-image: -o-linear-gradient(left, transparent, rgba(0, 0, 0, .1), transparent);
    border: 0;
}

#upAndRunningBg {
    margin-top: 100px;
    height: 130px;
    width: 100%;
    background: #f0f0f0;
}

#upAndRunning {
    margin-top: -150px;
    margin-bottom: 150px;
}

#upAndRunningLeft {
    line-height: 150%;
    padding-top: 30px;
}

#upAndRunningLeft span {
    font-size: 48px;
    color: #0166AE;
    display: inline-block;
    margin-top: 10px;
    vertical-align: bottom;
}

#upAndRunningRight {
    margin-top: -5px;
    background: #ffffff;
    padding: 10px;
    border: 1px #CCCCCC solid;
    border-radius: 10px;
}

img.screenshot {
    border: 1px #ccc dashed;
    padding: 5px;
    margin-bottom: 15px;
}

#download-pricing {
    text-align: center;
}

#download-pricing .table-left tr>td:first-child {
    font-weight: bold;
    text-align: left;
}

#download-pricing tr>td>.fa-check {
    color: #888888;
    font-weight: bold;
    text-align: left;
}

#download-pricing th {
    text-align: center;
    font-size: 18px;
}

#download-pricing .btn-download {
    width: 150px;
}

#download-pricing .btn-download i {
    color: white;
}

#download-pricing .modal {
    text-align: left;
}

#downloadStatsBg {
    height: 130px;
    width: 100%;
    background: #f0f0f0;
}

#downloadStats {
    margin-top: -150px;
}

#downloadStatsLeft {
    line-height: 150%;
    padding-top: 30px;
}

#downloadStatsLeft span {
    font-size: 48px;
    color: #0166AE;
    display: inline-block;
    margin-top: 10px;
    vertical-align: bottom;
}

#downloadStatsRight {
    margin-top: -15px;
    background: #ffffff;
    padding: 10px;
    border: 1px #CCCCCC solid;
    border-radius: 10px;
    max-width: 100%;
}

.marketing .row {
    text-align: left;
    padding-bottom: 10px;
}

.marketing .row img {
    float: left;
    margin-right: 7px;
}

.marketing .row p {
    clear: both;
}

.marketing-section-head {
    text-align: center;
    font-size: 36px;
    font-weight: bold;
    line-height: 150%;
}
/* ... */

